fix: gallery on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ h1, h2 {
 .podcast-embed iframe {
     border-radius: 12px;
     display: block;
+    width: 100%;
 }
 
 .youtube-thumbnail-wrap {
@@ -559,6 +560,10 @@ h1, h2 {
     #events .section-description {
         font-size: 3.5vw;
         padding: 0 1em;
+    }
+
+    h2 {
+        font-size: 10vw;
     }
     
     .toggle-button {
